--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>This is my kedua GIT Training</h1>
 <h3>This is my H3</h3>
+<a href="https://malaysia.travel" target="_blank" rel="noopener noreferrer">
+  Visit Malaysia Travel
+</a>
+<p>this is my pargraph</p>
